@@ -5,14 +5,18 @@
  */
 
 #admin {
-
+  color: inherit;
+  background-color: #eeeeee;
+  padding-top: 10px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-bottom: 6px;
 }
 
 #admin-menu {
   font-size: 120%;
   width: 100%;
   border-bottom: 3px solid #aaaaaa;
-  margin-bottom: 10px;
   margin-top: 10px;
 }
 
@@ -26,12 +30,13 @@
   color: inherit;
   background-color: #eeeeee;
   border-left: 1px solid #aaaaaa;
-  border-right: 1px solid #aaaaaa;
   padding: 5px;
 }
 
 .menu-inactive {
   display: table-cell;
+  background-color: #ffffff;
+  border-left: 1px solid #aaaaaa;
   padding: 5px;
 }
 
