@@ -28,9 +28,11 @@ import org.snipsnap.app.Application;
 import org.snipsnap.snip.HomePage;
 import org.snipsnap.snip.SnipLink;
 import org.snipsnap.snip.XMLSnipExport;
+import org.snipsnap.snip.XMLSnipImport;
 import org.snipsnap.user.User;
 import org.snipsnap.user.UserManager;
 import org.snipsnap.config.AppConfiguration;
+import org.snipsnap.util.log.Logger;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.Cookie;
@@ -42,65 +44,42 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.io.InputStream;
+import java.io.StringReader;
+import java.io.ByteArrayInputStream;
 import java.util.Map;
 import java.util.HashMap;
 import java.util.StringTokenizer;
 
 /**
- * Servlet to export database.
+ * Servlet to import into the database.
  * @author Matthias L. Jugel
  * @version $Id$
  */
-public class ExportServlet extends HttpServlet {
-  private final static String OK_EXPORTED = "Export OK!";
-  private final static String ERR_WRONG_OUTPUT = "Don't know where to output data!";
-  private final static String ERR_IOEXCEPTION = "Error while writing data!";
+public class ImportServlet extends HttpServlet {
+  private final static String OK_IMPORTED = "Import OK!";
+  private final static String ERR_IOEXCEPTION = "Error while importing!";
 
   public void doPost(HttpServletRequest request, HttpServletResponse response)
     throws ServletException, IOException {
-    String output = request.getParameter("output");
-    String data[] = request.getParameterValues("data");
+
+    boolean overwrite = "overwrite".equals(request.getParameter("overwrite"));
+    String xml = request.getParameter("input");
+    Logger.log(xml);
     HttpSession session = request.getSession();
     session.removeAttribute("errors");
     Map errors = new HashMap();
     session.setAttribute("errors", errors);
 
-    OutputStream out = null;
-    if("application".equals(output)) {
-      AppConfiguration config = Application.get().getConfiguration();
-      File outFile = new File(config.getFile().getParentFile(), config.getName()+".snip");
-      out = new FileOutputStream(outFile);
-    } else if("web".equals(output)) {
-      response.setContentType("text/xml");
-      out = response.getOutputStream();
-    } else {
-      errors.put("message", ERR_WRONG_OUTPUT);
-      response.sendRedirect(SnipLink.absoluteLink(request, "/exec/admin/export.jsp"));
-      return;
-    }
+//    try {
+//      XMLSnipImport.load(new ByteArrayInputStream(xml.getBytes()), overwrite);
+//    } catch (IOException e) {
+//      errors.put("message", ERR_IOEXCEPTION);
+//      response.sendRedirect(SnipLink.absoluteLink(request, "/exec/admin/export.jsp"));
+//      return;
+//    }
 
-    int exportMask = 0;
-    for(int i = 0; i < data.length; i++) {
-      if("users".equals(data[i])) {
-        exportMask = exportMask | XMLSnipExport.USERS;
-      }
-      if("snips".equals(data[i])) {
-        exportMask = exportMask | XMLSnipExport.SNIPS;
-      }
-    }
-
-    try {
-      XMLSnipExport.store(out, exportMask);
-    } catch (IOException e) {
-      errors.put("message", ERR_IOEXCEPTION);
-      response.sendRedirect(SnipLink.absoluteLink(request, "/exec/admin/export.jsp"));
-      return;
-    }
-
-    if("application".equals(output)) {
-      out.close();
-      errors.put("message", OK_EXPORTED);
-      response.sendRedirect(SnipLink.absoluteLink(request, "/exec/admin/export.jsp"));
-    }
+    errors.put("message", "not implemented yet");
+    response.sendRedirect(SnipLink.absoluteLink(request, "/exec/admin/import.jsp"));
   }
 }
